# pandora

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
application/: asgi.py  logging.py  sentry.py  wsgi.py
application/settings/: base.py  development.py  production.py
bootstrap/: README.md  package-lock.json  package.json  theme-2019.scss  theme-2022.scss  theme-2023.scss  theme-2024.scss  theme-2025.scss  theme-2026.scss  theme-general.scss
docs/: database.md  development.md  index.md  production.md  usage.md
docs/diagrams/: database.dot
pandora/: urls.py  util.py  websocket_urls.py
pandora/core/: apps.py  email.py  forms.py  models.py  urls.py  views.py  widgets.py
pandora/core/static/css/: main.css
pandora/core/templates/: email_debug.html
pandora/core/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  profile.html  profile_update.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
pandora/core/templates/base/: header.html  index.html
pandora/core/templates/emails/: base.html
pandora/core/templatetags/: oauth.py  util.py
pandora/editions/: admin.py  apps.py  mixins.py  urls.py  websocket_urls.py
pandora/editions/consumers/: edition.py  event.py
pandora/editions/fixtures/: edition_settings.json
pandora/editions/forms/: archive.py  edition.py  edition_setting.py  event_absence.py  event_presence.py  kill.py  kill_code.py  score_modification.py
pandora/editions/migrations/: 0001_initial.py  0002_initial.py  0003_change_team_unique.py  0004_change_day.py  0005_add_edition_setting.py  0006_add_default_code.py  0007_fix_unique_together.py  0008_fix_kill_code_kill.py  0009_fix_score_modification_type.py  0010_add_event.py  0011_add_edition_media.py  0012_change_edition_media.py  0013_fix_edition_media.py  0014_rename_event_attendance.py  0015_add_event_is_hidden.py  0016_add_edition_is_hidden.py  0017_add_committee_member_is_hidden.py  0018_fix_score_modification.py  0019_update_score_modification_amount.py  0020_add_base_model.py  0021_add_edition_media_item_type.py  0022_add_archive_score.py  0023_change_archive_score.py  0024_change_committee_member.py  0025_change_committee_member.py
pandora/editions/models/: __init__.py  archive_score.py  committee_member.py  day.py  edition.py  edition_media_item.py  edition_setting.py  event.py  event_absence.py  event_presence.py  kill.py  kill_code.py  score_modification.py
pandora/editions/resources/: kill_code.py
pandora/editions/templatetags/: edition.py
pandora/editions/views/: archive.py  committee_member.py  dashboard.py  edition.py  edition_media_item.py  edition_setting.py  event.py  event_absence.py  event_presence.py  kill.py  kill_code.py  score_modification.py  scores.py  static.py
pandora/pregames/: admin.py  apps.py  urls.py
pandora/pregames/forms/: pregame_puzzle_code.py  pregame_solve.py
pandora/pregames/migrations/: 0001_initial.py  0002_add_pregame_bonus.py  0003_change_pregame_puzzle_code_puzzle.py  0004_add_base_model.py
pandora/pregames/models/: __init__.py  pregame.py  pregame_puzzle_code.py  pregame_solve.py
pandora/pregames/views/: pregame.py  pregame_puzzle_code.py  pregame_solve.py
pandora/puzzles/: admin.py  apps.py  fields.py  urls.py
pandora/puzzles/forms/: hint.py  puzzle.py  puzzle_code.py  puzzle_file.py  solve.py
pandora/puzzles/migrations/: 0001_initial.py  0002_fix_solve_team.py  0003_add_default_code.py  0004_fix_unique_together.py  0005_add_puzzle_file.py  0006_change_hint_puzzle_code.py  0007_remove_hint_score_modification.py  0008_add_hint_committee_comment.py  0009_add_puzzle_info.py  0010_change_puzzle_code_puzzle.py  0011_add_base_model.py
pandora/puzzles/models/: __init__.py  hint.py  puzzle.py  puzzle_code.py  puzzle_file.py  solve.py
pandora/puzzles/views/: hint.py  participant_puzzle_code.py  pregame_solve.py  puzzle.py  puzzle_code.py  puzzle_file.py  solve.py
pandora/teams/: admin.py  apps.py  mixins.py  urls.py
pandora/teams/forms/: participant_team.py  participant_team_member.py  team_member.py
pandora/teams/migrations/: 0001_initial.py  0002_change_team_unique.py  0003_add_team_join_code.py  0004_add_team_status.py  0005_fix_team_status.py  0006_fix_team_image.py  0007_add_team_member_code.py  0008_change_team_member_code.py  0009_change_team_edition.py  0010_add_base_model.py
pandora/teams/models/: __init__.py  team.py  team_member.py
pandora/teams/resources/: team_member.py
pandora/teams/templatetags/: team.py
pandora/teams/views/: participant_team.py  participant_team_member.py  team.py  team_member.py
pandora/themes/: apps.py
scripts/: generate_diagrams.sh  start_server.sh
(+120 files in other folders)
