[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pandora"
version = "1.0.0"
description = "Website for Inter-Actief Pandora."
authors = ["Pandora Committee <pandora@inter-actief.net>"]
maintainers = ["Pandora Committee <pandora@inter-actief.net>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/Inter-Actief/pandora"
repository = "https://github.com/Inter-Actief/pandora"

keywords = ["pandora"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.8.1"
beautifulsoup4 = "^4.13.4"
channels = "^4.2.2"
channels-redis = "^4.2.0"
croniter = "^6.0.0"
django = "^5.1.8"
django-allauth = {extras = ["openid", "socialaccount"], version = "^65.7.0"}
django-allow-cidr = "^0.7.1"
django-bootstrap5 = "^25.1"
django-cors-headers = "^4.7.0"
django-filter = "^25.1"
django-import-export = "^4.3.7"
django-qr-code = "^4.0.1"
django-request-cache = "^1.4.0"
gunicorn = "^23.0.0"
mysqlclient = "^2.2.7"
pillow = "^11.2.1"
python-dotenv = "^1.1.0"
pytz = "^2025.2"
sentry-sdk = "^2.26.1"
uvicorn = {extras = ["standard"], version = "^0.34.1"}
uvicorn-worker = "^0.3.0"

[tool.poetry.group.dev.dependencies]
daphne = "^4.0.0"
django-debug-toolbar = "^5.1.0"
django-extensions = "^4.1"
pygraphviz = { version = "^1.12", platform = "linux" }
