[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pandora"
version = "1.0.0"
description = "Website for Inter-Actief Pandora."
authors = ["Pandora Committee <pandora@inter-actief.net>"]
maintainers = ["Pandora Committee <pandora@inter-actief.net>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/Inter-Actief/pandora"
repository = "https://github.com/Inter-Actief/pandora"

keywords = ["pandora"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.11.1"
beautifulsoup4 = "^4.14.3"
channels = "^4.3.2"
channels-redis = "^4.3.0"
croniter = "^6.0.0"
django = "^5.2.11"
django-allauth = {extras = ["openid", "socialaccount"], version = "^65.14.0"}
django-allow-cidr = "^0.8.0"
django-bootstrap5 = "^26.1"
django-cors-headers = "^4.9.0"
django-filter = "^25.2"
django-import-export = "^4.4.0"
django-qr-code = "^4.2.0"
django-request-cache = "^1.4.0"
gunicorn = "^25.0.3"
mysqlclient = "^2.2.7"
pillow = "^12.1.0"
python-dotenv = "^1.2.1"
pytz = "^2025.2"
sentry-sdk = "^2.52.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
uvicorn-worker = "^0.4.0"

[tool.poetry.group.dev.dependencies]
daphne = "^4.2.1"
django-debug-toolbar = "^6.2.0"
django-extensions = "^4.1"
pygraphviz = { version = "^1.12", platform = "linux" }
