[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pandora"
version = "1.0.0"
description = "Website for Inter-Actief Pandora."
authors = ["Pandora Committee <pandora@inter-actief.net>"]
maintainers = ["Pandora Committee <pandora@inter-actief.net>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/Inter-Actief/pandora"
repository = "https://github.com/Inter-Actief/pandora"

keywords = ["pandora"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Private :: Do Not Upload",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.11.1"
beautifulsoup4 = "^4.14.3"
channels = "^4.3.2"
channels-redis = "^4.3.0"
croniter = "^6.2.2"
django = "^5.2.12"
django-allauth = {extras = ["openid", "socialaccount"], version = "^65.15.0"}
django-allow-cidr = "^0.8.0"
django-bootstrap5 = "^26.2"
django-cors-headers = "^4.9.0"
django-filter = "^25.2"
django-import-export = "^4.4.0"
django-qr-code = "^4.2.0"
django-request-cache = "^1.4.0"
gunicorn = "^25.3.0"
mysqlclient = "^2.2.8"
pillow = "^12.2.0"
python-dotenv = "^1.2.2"
pytz = "^2026.1"
sentry-sdk = "^2.56.0"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
uvicorn-worker = "^0.4.0"

[tool.poetry.group.dev.dependencies]
daphne = "^4.2.1"
django-debug-toolbar = "^6.2.0"
django-extensions = "^4.1"
pygraphviz = { version = "^1.12", platform = "linux" }
